[package]
name = "pulsar-shovel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
toml = "0.5.8"
thiserror = "1.0.26"
futures = "0.3"
pulsar_rs = { package = "sn-pulsar", git = "https://github.com/omegaphoenix/pulsar-rs.git", branch = "hotfix/v4.1.2-add-uncompressed-size", features = ["compression"] }
tokio = { version="1.19", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"