[package]
name = "pulsar-shovel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3"
lazy_static = "1.5.0"
log = "0.4.14"
pulsar = { version = "6.3.0", features = ["tokio-runtime", "compression", "auth-oauth2"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
thiserror = "1.0.26"
tokio = { version="1.19", features = ["full"] }
toml = "0.5.8"
